Search for desktop files in autostart dir if service was autostarted

BUG:452248